update to get utterance
